[package]
name = "me-mail"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Farah <matthewtamerfarah@gmail.com>", "Nabil Aldhini <epicswagman@based.com>"]
description = "A CLI tool to perform automated tasks on authenticated email inboxes"

[dependencies]
clap = { version = "4.5.34", features = ["derive", "cargo"] }
google-oauth = "1.11.3"
tokio = { version = "1.44.1", features = ["full"] }
