[package]
name = "me-mail"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Farah <matthewtamerfarah@gmail.com>", "Nabil Aldihni <aldihninabil@gmail.com>"]
description = "A CLI tool to perform automated tasks on authenticated email inboxes"

[dependencies]
actix-web = {version = "4.10.2", features = ["openssl"]}
anyhow = "1.0.98"
clap = { version = "4.5.34", features = ["derive", "cargo"] }
dotenv = "0.15.0"
google-oauth = "1.11.3"
openssl = "0.10.72"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
